# UIP-Urban_Intelligence_Platform

./: .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTORS.md  COPYING  DISCUSSIONS.md  Dockerfile  JUSTRUN.md  LICENSE  LICENSE_AUDIT_REPORT.md  MANIFEST.in  Makefile  NEWS  NOTICE  README.md  THIRD_PARTY_LICENSES.md  baocao_danhgia.md  diem.md  docker-compose.yml  justrun.ps1  justrun.sh  license_audit.csv  main.py  orchestrator.py  pof.md  pyproject.toml  pytest.ini  ruff.toml  run_cv_and_sync.py  setup.py  start_citizen_agent.bat  start_cv_verification_service.py  test_citizen_api.py  test_citizen_complete_workflow.py  test_citizen_with_real_image.py  (+4 more)
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md  SUPPORT.md  dependabot.yml  labeler.yml  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: announcements.yml  config.yml  ideas.yml  q-a.yml  release-announcement.yml  rfc.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: # Code Citations.md  auto-label.yml  codeql.yml  dependency-review.yml  deploy-docs.yml  deploy.yml  integration-tests.yml  lint.yml  release.yml  stale.yml  test.yml
apps/traffic-web-app/: README.md  package.json
config/: accident_config.yaml  agents.yaml  alert_dispatcher_config.yaml  api_gateway_config.yaml  cache_config.yaml  congestion_config.yaml  content_negotiation_config.yaml  cv_config.yaml  data_quality_config.yaml  data_sources.yaml  fuseki.yaml  gateway-application.yml  grafana_dashboard.json  health_check_config.yaml  incident_report_config.yaml  integration_test_config.yaml  lod_linkset_mappings.yaml  mongodb_config.yaml  namespaces.yaml  neo4j_sync.yaml  ngsi_ld_mappings.yaml  pattern_config.yaml  pattern_recognition.yaml  performance_monitor_config.yaml  sosa_mappings.yaml  state_updater_config.yaml  stellio.yaml  subscriptions.yaml  temporal_config.yaml  validation.yaml  workflow.yaml
data/: accidents.json  cameras_cleaned.json  cameras_enriched.json  cameras_raw.json  cameras_updated.json  citizen_stellio_test.json  congestion.json  congestion_state.json  failed_entities.json  hcmc_traffic_assembler.ttl  ngsi_ld_entities.json  observations.json  observations_publish_report.json  patterns.json  publish_report.json  traffic_patterns.json  validated_entities.json  validated_observations.json  validation_report.json
docker/: Dockerfile.test  Dockerfile.test.optimized  docker-compose.dev.yml
docker/reference/: stellio-official-dependencies.yml  stellio-official-env.txt
docs/: CITIZEN_CV_VERIFICATION_SETUP.md  CITIZEN_SCIENCE_FEATURE.md  CONTRIBUTING.md  LOD_LINKSET_ENRICHMENT_GUIDE.md  README.md  docusaurus.config.ts  intro.md  package.json  quick-start.md  sidebars.ts
docs/agents/: complete-agents-reference.md  overview.md
docs/api/: API.md  agents.md  complete-api-reference.md  orchestrator.md  overview.md  rest-api.md  transformation.md  websocket.md
docs/architecture/: ARCHITECTURE.md  data_flow.md  deployment.md  overview.md  (+1 more)
guides/: DATA_ACCESS_GUIDE.md  DOCKER_SCRIPTS_GUIDE.md  GUIDE_NEO4J_LOD_USAGE.md  QUICKSTART.md  SEED_DATA_GUIDE.md
reports/: ACCIDENT_DETECTION_REPORT.md  AIR_QUALITY_API_COMPARISON.md  ALERT_DISPATCHER_REPORT.md  ANALYSIS_ACCIDENT_DETECTION.md  API_GATEWAY_REPORT.md  CACHE_MANAGER_REPORT.md  CHANGELOG_SOSA_FIX.md  COMPLETION_SUMMARY.md  CONGESTION_DETECTION_REPORT.md  CONTENT_NEGOTIATION_REPORT.md  CRITICAL_BUGFIX_REPORT.md  CV_ANALYSIS_REPORT.md  DATA_FLOW_VERIFICATION_REPORT.md  DATA_QUALITY_VALIDATOR_REPORT.md  DOCKER_OPTIMIZATION.md  ENTITY_PUBLISHER_REPORT.md  EXTERNAL_DATA_COLLECTOR_REPORT.md  FIX_COMPLETION_REPORT.md  FIX_DEPLOYMENT_INSTRUCTIONS.md  HEALTH_CHECK_AGENT_REPORT.md  IMPLEMENTATION_SUMMARY.md  INCIDENT_REPORT_GENERATOR_REPORT.md  INTEGRATION_TEST_REPORT.md  NEO4J_FIX_COMPLETION_REPORT.md  NEO4J_FIX_SUMMARY.md  NGSI_LD_TO_RDF_REPORT.md  NGSI_LD_TRANSFORMER_REPORT.md  ORCHESTRATOR_FIXES_SUMMARY.md  ORCHESTRATOR_REPORT.md  PATTERN_RECOGNITION_REPORT.md  PERFORMANCE_MONITOR_REPORT.md  PHASE5_EMPTY_STRUCTURE_ANALYSIS.md  PHASE5_FIX_COMPLETION_REPORT.md  PHASE5_FIX_SUMMARY_VI.md  PHASE5_NEW_JSON_STRUCTURE.md  PIPELINE_EXECUTION_REPORT.md  RATE_LIMIT_FIX_COMPLETE.md  RATE_LIMIT_FIX_SUMMARY.md  SKIP_WARNING_ROOT_CAUSE_ANALYSIS.md  SMART_DATA_MODELS_VALIDATION_REPORT.md  (+10 more)
requirements/: base.txt  citizen_science_deps.txt  dev.txt  prod.txt  test.txt
scripts/: analyze_missing_issues.py  clean_and_publish_cameras.py  cleanup_cache.py  deploy.sh  download_accident_model.py  download_yolox_weights.py  health_check.sh  monitoring_setup.sh  rollback.sh  run_citizen_verification.py  seed_citizen_reports.py  seed_mongodb_sample_data.py  setup_dev.sh  setup_prod.sh  start_citizen_agent.bat  start_cv_verification_service.py  sync_issues_from_execution_order.py  update_headers.py  verify_mongodb_ngsild_data.py
src/: __init__.py  orchestrator.py
templates/: entity.html  incident_report.html  incident_web.html
tests/: __init__.py  conftest.py  test_citizen_api.py  test_citizen_complete_workflow.py  test_citizen_with_real_image.py  test_congestion_debug.py  test_congestion_full.py  test_jsonld_extraction.py  test_mongodb_deep_integrity.py  test_refdevice_extraction.py
wiki/: API-Reference.md  Agent-Categories.md  Apache-Fuseki-Guide.md  Backend-Guide.md  CI-CD-Pipeline.md  Changelog.md  Code-Style.md  Configuration.md  Contributing.md  Data-Flow.md  Data-Validation.md  Database-Guide.md  Deployment-Guide.md  Docker-Services.md  Docker-Setup.md  Entity-Types.md  FAQ.md  Frontend-Guide.md  Glossary.md  Home.md  Installation.md  LOD-Cloud-Integration.md  License.md  Logging-Guide.md  Message-Queue.md  Monitoring-Guide.md  Monitoring.md  Multi-Agent-System.md  NGSI-LD-Guide.md  One-Command-Setup.md  Performance-Tuning.md  Python-Agents.md  Quick-Start.md  RDF-Assembler-Agent.md  Release-Process.md  SOSA-SSN-Ontology.md  Semantic-Web-Guide.md  Smart-Data-Models.md  Stellio-Guide.md  System-Architecture.md  (+7 more)
(+676 files in other folders)
