# SPDX-License-Identifier: MIT
# Copyright (c) 2025 UIP Team. All rights reserved.
#
# UIP - Urban Intelligence Platform
# Project configuration file (PEP 518/621 compliant)
#
# Module: pyproject.toml
# Author: Nguyen Nhat Quang (Lead), Nguyen Viet Hoang, Nguyen Dinh Anh Tuan
# Version: 2.0.0
# Repository: https://github.com/UIP-Urban-Intelligence-Platform/UIP-Urban_Intelligence_Platform

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uip-urban-intelligence-platform"
version = "2.0.0"
description = "Multi-Agent Linked Open Data Pipeline for Traffic Management"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Nguyễn Nhật Quang", email = "nguyennhatquang522004@gmail.com"},
    {name = "Nguyễn Việt Hoàng", email = "viethoang01062004nt@gmail.com"},
    {name = "Nguyễn Đình Anh Tuấn", email = "nguyentuan834897@gmail.com"}
]
maintainers = [
    {name = "Nguyễn Nhật Quang", email = "nguyennhatquang522004@gmail.com"},
    {name = "Nguyễn Việt Hoàng", email = "viethoang01062004nt@gmail.com"},
    {name = "Nguyễn Đình Anh Tuấn", email = "nguyentuan834897@gmail.com"}
]
keywords = ["linked-data", "open-data", "ngsi-ld", "rdf", "semantic-web", "multi-agent", "traffic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "aiohttp>=3.9.1",
    "aiosignal>=1.3.1",
    "frozenlist>=1.4.0",
    "multidict>=6.0.4",
    "yarl>=1.9.3",
    "PyYAML>=6.0.1",
    "python-json-logger>=2.0.7",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.11.0",
    "ruff>=0.1.0",
    "mypy>=1.7.1",
    "types-PyYAML>=6.0.12.12",
    "types-aiofiles>=23.2.0.0",
]
test = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[project.urls]
Homepage = "https://github.com/UIP-Urban-Intelligence-Platform/UIP-Urban_Intelligence_Platform"
Documentation = "https://github.com/UIP-Urban-Intelligence-Platform/UIP-Urban_Intelligence_Platform/docs"
Repository = "https://github.com/UIP-Urban-Intelligence-Platform/UIP-Urban_Intelligence_Platform"
Issues = "https://github.com/UIP-Urban-Intelligence-Platform/UIP-Urban_Intelligence_Platform/issues"

[project.scripts]
uip-orchestrator = "orchestrator:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
namespaces = false

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# NOTE: isort config kept for backward compatibility
# Ruff now handles import sorting via [lint.isort] in ruff.toml
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
files = ["src"]

[[tool.mypy.overrides]]
module = [
    "aiohttp.*",
    "yaml.*",
    "pytest.*",
]
ignore_missing_imports = true

# NOTE: pylint config kept for backward compatibility
# Ruff now handles linting via ruff.toml (10-100x faster)
[tool.pylint.main]
py-version = "3.9"
ignore = [".venv", "build", "dist"]
jobs = 0
load-plugins = []

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
]

[tool.pylint.format]
max-line-length = 100

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
